[project]
name = "retracesoftware_autoenable"
version = "0.1.1"
description = "Auto-enable retracesoftware instrumentation"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = ["retracesoftware_proxy"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["sitecustomize"]